force-app/main/default/objects/ADM_Release_Signoff__c/ADM_Release_Signoff__c.object-meta.xml
<CustomObject>
    <label>Release Signoff</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Release Signoff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Signoff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>