force-app/main/default/objects/ADM_Release_Signoff__c/fields/AppStore__c.field-meta.xml
<CustomField>
    <fullName>AppStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used by the AppStore team to provide signoff</description>
    <label>AppStore</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoff2</relationshipName>
    <type>Lookup</type>
</CustomField>