force-app/main/default/objects/ADM_Release_Signoff__c/fields/AppStore_Approval__c.field-meta.xml
<CustomField>
    <fullName>AppStore_Approval__c</fullName>
    <description>This is used by the AppStore teams to provide the date when they signed off at Release Freeze</description>
    <label>AppStore Approval</label>
    <type>Date</type>
</CustomField>