force-app/main/default/objects/ADM_Release_Signoff__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build</label>
    <referenceTo>ADM_Build__c</referenceTo>
    <relationshipLabel>Release Signoff</relationshipLabel>
    <relationshipName>Release_Signoff</relationshipName>
    <type>Lookup</type>
</CustomField>