force-app/main/default/objects/ADM_Release_Signoff__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzW0MAI</relationshipName>
    <type>Lookup</type>
</CustomField>