force-app/main/default/objects/ADM_Release_Signoff__c/fields/Core_Approval__c.field-meta.xml
<CustomField>
    <fullName>Core_Approval__c</fullName>
    <label>Core Approval</label>
    <type>Date</type>
</CustomField>