force-app/main/default/objects/ADM_Release_Signoff__c/fields/Dev__c.field-meta.xml
<CustomField>
    <fullName>Dev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Exec</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzRbMAI</relationshipName>
    <type>Lookup</type>
</CustomField>