force-app/main/default/objects/ADM_Release_Signoff__c/fields/Dev_Approval__c.field-meta.xml
<CustomField>
    <fullName>Dev_Approval__c</fullName>
    <label>Engineering Exec Approval</label>
    <type>Date</type>
</CustomField>