force-app/main/default/objects/ADM_Release_Signoff__c/fields/Doc__c.field-meta.xml
<CustomField>
    <fullName>Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzW1MAI</relationshipName>
    <type>Lookup</type>
</CustomField>