force-app/main/default/objects/ADM_Release_Signoff__c/fields/Doc_Approval__c.field-meta.xml
<CustomField>
    <fullName>Doc_Approval__c</fullName>
    <label>Doc Approval</label>
    <type>Date</type>
</CustomField>