force-app/main/default/objects/ADM_Release_Signoff__c/fields/L10N__c.field-meta.xml
<CustomField>
    <fullName>L10N__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L10N</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzWFMAY</relationshipName>
    <type>Lookup</type>
</CustomField>