force-app/main/default/objects/ADM_Release_Signoff__c/fields/L10N_Approval__c.field-meta.xml
<CustomField>
    <fullName>L10N_Approval__c</fullName>
    <label>L10N Approval</label>
    <type>Date</type>
</CustomField>