force-app/main/default/objects/ADM_Release_Signoff__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzW5MAI</relationshipName>
    <type>Lookup</type>
</CustomField>