force-app/main/default/objects/ADM_Release_Signoff__c/fields/Platform_Approval__c.field-meta.xml
<CustomField>
    <fullName>Platform_Approval__c</fullName>
    <label>Platform Approval</label>
    <type>Date</type>
</CustomField>