force-app/main/default/objects/ADM_Release_Signoff__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzWAMAY</relationshipName>
    <type>Lookup</type>
</CustomField>