force-app/main/default/objects/ADM_Release_Signoff__c/fields/Product_Approval__c.field-meta.xml
<CustomField>
    <fullName>Product_Approval__c</fullName>
    <label>Product Approval</label>
    <type>Date</type>
</CustomField>