force-app/main/default/objects/ADM_Release_Signoff__c/fields/QA__c.field-meta.xml
<CustomField>
    <fullName>QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross-Cloud Exec</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzTHMAY</relationshipName>
    <type>Lookup</type>
</CustomField>