force-app/main/default/objects/ADM_Release_Signoff__c/fields/QA_Approval__c.field-meta.xml
<CustomField>
    <fullName>QA_Approval__c</fullName>
    <label>Cross-Cloud Exec Approval</label>
    <type>Date</type>
</CustomField>