force-app/main/default/objects/ADM_Release_Signoff__c/fields/QE__c.field-meta.xml
<CustomField>
    <fullName>QE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TQE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tziTMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>