force-app/main/default/objects/ADM_Release_Signoff__c/fields/QPD__c.field-meta.xml
<CustomField>
    <fullName>QPD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quality, Performance and Docs</description>
    <label>QPD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoff</relationshipName>
    <type>Lookup</type>
</CustomField>