force-app/main/default/objects/ADM_Release_Signoff__c/fields/QPD_Approval__c.field-meta.xml
<CustomField>
    <fullName>QPD_Approval__c</fullName>
    <description>Date of QPD Approval</description>
    <label>QPD Approval</label>
    <type>Date</type>
</CustomField>