force-app/main/default/objects/ADM_Release_Signoff__c/fields/Release_Approved__c.field-meta.xml
<CustomField>
    <fullName>Release_Approved__c</fullName>
    <label>Release Approved</label>
    <type>Date</type>
</CustomField>