force-app/main/default/objects/ADM_Release_Signoff__c/fields/RM_Approval__c.field-meta.xml
<CustomField>
    <fullName>RM_Approval__c</fullName>
    <label>RM Approval</label>
    <type>Date</type>
</CustomField>