force-app/main/default/objects/ADM_Release_Signoff__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000u21OMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>