force-app/main/default/objects/ADM_Release_Signoff__c/fields/Security_Approval__c.field-meta.xml
<CustomField>
    <fullName>Security_Approval__c</fullName>
    <label>Security Approval</label>
    <type>Date</type>
</CustomField>