force-app/main/default/objects/ADM_Release_Signoff__c/fields/Staggered_Release__c.field-meta.xml
<CustomField>
    <fullName>Staggered_Release__c</fullName>
    <formula>$RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staggered Release</label>
    <type>Text</type>
</CustomField>