force-app/main/default/objects/ADM_Release_Signoff__c/fields/Systest__c.field-meta.xml
<CustomField>
    <fullName>Systest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Performance Engineering (aka SysTest) signoff</description>
    <label>PerfEng</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzVqMAI</relationshipName>
    <type>Lookup</type>
</CustomField>