force-app/main/default/objects/ADM_Release_Signoff__c/fields/Systest_Approval__c.field-meta.xml
<CustomField>
    <fullName>Systest_Approval__c</fullName>
    <label>PerfEng Approval</label>
    <type>Date</type>
</CustomField>