force-app/main/default/objects/ADM_Release_Signoff__c/fields/Tech_SVP_Approval__c.field-meta.xml
<CustomField>
    <fullName>Tech_SVP_Approval__c</fullName>
    <description>Date of Tech SVP Approval</description>
    <label>Tech SVP Approval</label>
    <type>Date</type>
</CustomField>