force-app/main/default/objects/ADM_Release_Signoff__c/fields/TechOps__c.field-meta.xml
<CustomField>
    <fullName>TechOps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TechOps</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzTgMAI</relationshipName>
    <type>Lookup</type>
</CustomField>