force-app/main/default/objects/ADM_Release_Signoff__c/fields/TechOps_Approval__c.field-meta.xml
<CustomField>
    <fullName>TechOps_Approval__c</fullName>
    <label>TechOps Approval</label>
    <type>Date</type>
</CustomField>