force-app/main/default/objects/ADM_Release_Signoff__c/fields/TQE_Approval__c.field-meta.xml
<CustomField>
    <fullName>TQE_Approval__c</fullName>
    <label>TQE Approval</label>
    <type>Date</type>
</CustomField>