force-app/main/default/objects/ADM_Release_Signoff__c/fields/UE__c.field-meta.xml
<CustomField>
    <fullName>UE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UX</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzW2MAI</relationshipName>
    <type>Lookup</type>
</CustomField>