force-app/main/default/objects/ADM_Release_Signoff__c/fields/UE_Approval__c.field-meta.xml
<CustomField>
    <fullName>UE_Approval__c</fullName>
    <label>UX Approval</label>
    <type>Date</type>
</CustomField>