force-app/main/default/objects/ADM_Release_Signoff__c/recordTypes/GUS.recordType-meta.xml
<RecordType>
    <fullName>GUS</fullName>
    <active>true</active>
    <description>GUS</description>
    <label>GUS</label>
</RecordType>