force-app/main/default/objects/ADM_Release_Signoff__c/recordTypes/R0.recordType-meta.xml
<RecordType>
    <fullName>R0</fullName>
    <active>true</active>
    <label>R0</label>
</RecordType>