force-app/main/default/objects/ADM_Release_Signoff__c/recordTypes/R2.recordType-meta.xml
<RecordType>
    <fullName>R2</fullName>
    <active>true</active>
    <label>R2</label>
</RecordType>