force-app/main/default/objects/ADM_Release_Signoff__c/recordTypes/Release_Freeze.recordType-meta.xml
<RecordType>
    <fullName>Release_Freeze</fullName>
    <active>true</active>
    <description>This is the overall release signoff record</description>
    <label>Release Freeze</label>
</RecordType>