force-app/main/default/objects/ADM_Release_Signoff__c/recordTypes/Sandbox.recordType-meta.xml
<RecordType>
    <fullName>Sandbox</fullName>
    <active>true</active>
    <label>Sandbox</label>
</RecordType>